--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,13 @@
+// {
+//   "compilerOptions": {},
+//   "extends": "expo/tsconfig.base",
+//   "include": [
+//     "**/*.ts",
+//     "**/*.tsx",
+//     ".expo/types/**/*.ts",
+//     "expo-env.d.ts"
+//   ]
+// }
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
@@ -6,12 +16,5 @@
       "@/*": ["./*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts",
-    "app/_layout.jsx",
-    "app/index.jsx"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
